--- a/agents/profit_eval.ipynb
+++ b/agents/profit_eval.ipynb
@@ -159,7 +159,7 @@
     "\n",
     "if __name__ == '__main__':\n",
     "    project_dir = os.path.dirname(os.getcwd())\n",
-    "    model_name = 'multidqn' # 'arima', 'lstm', 'multidqn'\n",
+    "    model_name = 'lstm' # 'arima', 'lstm'\n",
     "    \n",
     "    # Parameters: risk-free rate, volatility, time to maturity, volume (to simulate large financial institution)\n",
     "    r, sigma, T, volume = 0.01, 0.2, 1/12, 1000000\n",
